--- a/frontend/pulseboard-web/package.json
+++ b/frontend/pulseboard-web/package.json
@@ -5,7 +5,8 @@
   "type": "module",
   "scripts": {
     "dev": "vite",
-    "build": "vue-tsc -b && vite build",
+    "build:css": "node scripts/build-tailwind-css.js",
+    "build": "npm run build:css && vue-tsc -b && vite build",
     "preview": "vite preview"
   },
   "dependencies": {
