--- a/frontend/pulseboard-web/package.json
+++ b/frontend/pulseboard-web/package.json
@@ -29,6 +29,7 @@
     "tailwindcss": "^3.4.18",
     "typescript": "~5.9.3",
     "vite": "^7.2.2",
+    "vite-plugin-pwa": "^1.1.0",
     "vitest": "^4.0.10",
     "vue-tsc": "^3.1.3"
   }
