--- a/frontend/pulseboard-web/package.json
+++ b/frontend/pulseboard-web/package.json
@@ -18,6 +18,7 @@
   },
   "devDependencies": {
     "@types/node": "^24.10.0",
+    "@vite-pwa/assets-generator": "^1.0.2",
     "@vitejs/plugin-vue": "^6.0.1",
     "@vitest/ui": "^4.0.10",
     "@vue/test-utils": "^2.4.6",
